5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1573_1332.log
== TEST (2019-03-11 15:38:26) 
-- CODE:
aresta =5
area = 3/2(3*5**2)**1/n
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2(3*5**2)**1/n
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:39:12) 
-- CODE:
aresta =5
area = 3/2(3*5**2)**1/2
 
print(round(area, 4))
-- EXECUTION TIME:
0.15994
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area = 3/2(3*5**2)**1/2
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:39:14) 
-- CODE:
aresta =5
area = 3/2(3*5**2)**1/2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2(3*5**2)**1/2
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:05) 
-- CODE:
aresta =5
area = 3/2(3**1/2)5**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2(3**1/2)5**2
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:40:37) 
-- CODE:
aresta =5
area = 3/2(3**0,5)5**2
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = 3/2(3**0,5)5**2
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:41:25) 
-- CODE:
aresta =5
area = 3/2*3**0,5*5**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:41:30) 
-- CODE:
aresta =5
area = 3/2*3**0,5*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.13581
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 4, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:43:25) 
-- CODE:
aresta =5
area = 3/2*(3**0,5)*5**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*(3**0,5)*5**2
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:43:29) 
-- CODE:
aresta =5
area = 3/2*(3**0,5)*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.165883
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area = 3/2*(3**0,5)*5**2
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:43:39) 
-- CODE:
aresta =5
area = 3/2*(3**0,5)*a**2
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*(3**0,5)*a**2
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:44:11) 
-- CODE:
aresta =5
area = 3/2*(3**0,5)*(a**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2*(3**0,5)*(a**2)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:44:29) 
-- CODE:
aresta =5
area = 3/2(3**0,5)(a**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2(3**0,5)(a**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:44:57) 
-- CODE:
aresta =5
area = 3/2(3**0,5)(5**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2(3**0,5)(5**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 15:45:17) 
-- CODE:
aresta =5
area = 3/2(3**0.5)(5**2)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2(3**0.5)(5**2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:45:23) 
-- CODE:
aresta =5
area = 3/2(3**0.5)(5**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.183213
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1573/1332/main.py", line 2, in <module>
    area = 3/2(3**0.5)(5**2)
TypeError: 'int' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 15:45:38) 
-- CODE:
aresta =5
area = 3/2*(3**0.5)*(5**2)
 
print(round(area, 4))
-- EXECUTION TIME:
0.287345
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:46:28) 
-- CODE:
aresta =5
area = 3/2*(3**1/2)*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.183411
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:46:32) 
-- CODE:
aresta =5
area = 3/2*(3**1/2)*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.195963
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 22:46:53) 
-- CODE:
aresta =5
area = 3/2*(3**1/2)*5**2
 
print(round(area, 4))
-- OUTPUT:
56.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:47:00) 
-- CODE:
aresta =5
area = 3/2*(3**1/2)*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.130175
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:47:19) 
-- CODE:
aresta =5
area = 3/2(3**1/2)5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.18848
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 2
    area = 3/2(3**1/2)5**2
                      ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:47:37) 
-- CODE:
aresta =5
area = 3/2*(3**1/2)*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.198459
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 22:47:39) 
-- CODE:
aresta =5
area = 3/2*(3**1/2)*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.178111
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
56.25
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:01:35) 
-- CODE:
aresta =5
area = 3/2*(3**0.5)*5**2
 
print(round(area, 4))
-- EXECUTION TIME:
0.136761
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
